--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ flutter:
     - assets/images/good.png
     - assets/images/docIntro.jpeg
     - assets/images/morse.jpg
+    - assets/images/HOR.jpg
 
 
     
