--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -5,7 +5,7 @@ name: Deploy to Firebase Hosting on merge
 'on':
   push:
     branches:
-      - (main)
+      - main
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
@@ -14,8 +14,8 @@ jobs:
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
-          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_MEDICAL_1DB58 }}'
+          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_MEDICAL05_2337A }}'
           channelId: live
-          projectId: medical-1db58
+          projectId: medical05-2337a
         env:
           FIREBASE_CLI_PREVIEWS: hostingchannels
